cmake_minimum_required(VERSION 3.16)

project(Kemena3dSdk
    VERSION 0.0.1
    DESCRIPTION "Kemena3D SDK"
    LANGUAGES CXX
)

# C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Option to build shared or static library
option(BUILD_SHARED_LIBS "Build as shared library" OFF)

# When ON  (default): Assimp drives mesh / animation import — full format set,
#                     editor-style build.
# When OFF           : Assimp is not compiled / linked. tinygltf (header-only)
#                     handles glTF and GLB imports; everything else fails to
#                     load. Saving via Assimp::Exporter is also unavailable.
#                     This is the slim "runtime" SDK build.
option(KEMENA_USE_ASSIMP "Include Assimp for full-format mesh import" ON)
if(NOT KEMENA_USE_ASSIMP)
    message(STATUS "Kemena3D SDK: building WITHOUT Assimp (tinygltf-only mesh import)")
endif()

# Optional MinGW flag (set via -G)
if(WIN32)
    option(USE_MINGW "Use MinGW on Windows" OFF)
    if(USE_MINGW)
        message(STATUS "Using MinGW")
        add_definitions(-DUSE_MINGW)
    else()
        message(STATUS "Using MSVC")
        add_definitions(-DUSE_MSVC)
    endif()
endif()

# Collect core source and header files
file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Source/src/*.cpp)
file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Source/include/*.h)

# Collect AngelScript add_on sources, and remove generateheader.cpp (which defines main)
file(GLOB_RECURSE ANGELSCRIPT_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/add_on/*.cpp)
list(REMOVE_ITEM ANGELSCRIPT_SRC "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/add_on/scriptbuilder/generateheader.cpp")
file(GLOB_RECURSE ANGELSCRIPT_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/add_on/*.h)

# ImGui sources
file(GLOB IMGUI_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imgui/*.cpp)
file(GLOB IMGUI_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imgui/*.h)
file(GLOB IMGUI_BACKENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imgui/backends/imgui_impl_sdl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imgui/backends/imgui_impl_opengl3.cpp
)

# ImGuizmo sources
file(GLOB IMGUIZMO_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imguizmo/src/*.cpp)
file(GLOB IMGUIZMO_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imguizmo/src/*.h)

# Create library target
add_library(kemena3d ${SRC_FILES} ${HEADER_FILES} ${ANGELSCRIPT_SRC} ${ANGELSCRIPT_HEADERS} ${IMGUI_SRC} ${IMGUI_HEADERS} ${IMGUI_BACKENDS} ${IMGUIZMO_SRC} ${IMGUIZMO_HEADERS})

set_target_properties(kemena3d PROPERTIES
    VERSION ${PROJECT_VERSION}
    PUBLIC_HEADER "${HEADER_FILES}"

    # Debug build output
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG   "${CMAKE_BINARY_DIR}/Output/lib/Debug"
    LIBRARY_OUTPUT_DIRECTORY_DEBUG   "${CMAKE_BINARY_DIR}/Output/lib/Debug"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${CMAKE_BINARY_DIR}/Output/lib/Debug"

    # Release build output
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Output/lib/Release"
    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Output/lib/Release"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Output/lib/Release"
)

# Include directories
target_include_directories(kemena3d
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/Source/include
		${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imgui
		${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imgui/backends
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/angelscript/include
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/add_on
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/sdl/include
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/include
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/assimp/include
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/assimp/build_$<CONFIG>/include
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/tinygltf
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glm
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/stb
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/miniaudio
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/nlohmann/include
		${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/portable-file-dialogs
		${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imguizmo/src
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt
        ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/include/recastnavigation
)

# Link directories (per-config)
link_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/sdl/build_$<CONFIG>
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/build_$<CONFIG>
    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/assimp/build_$<CONFIG>
)

# Definitions and static linking behavior
if (NOT BUILD_SHARED_LIBS)
    target_compile_definitions(kemena3d PRIVATE GLEW_STATIC)
    set(GLEW_LIB libglew32)
else()
    set(GLEW_LIB glew32)
endif()

# Use GLEW for imgui
target_compile_definitions(kemena3d PRIVATE IMGUI_IMPL_OPENGL_LOADER_GLEW)

# Runtime/editor switch: KEMENA_NO_ASSIMP is the source-side gate every
# import / export path keys off. Defined PUBLIC so consumers (studio, runtime)
# see the same value as the SDK objects.
if(NOT KEMENA_USE_ASSIMP)
    target_compile_definitions(kemena3d PUBLIC KEMENA_NO_ASSIMP)
endif()

# Jolt was built with default options (DEBUG_RENDERER_IN_DEBUG_AND_RELEASE,
# PROFILER_IN_DEBUG_AND_RELEASE, ENABLE_OBJECT_STREAM, FLOATING_POINT_EXCEPTIONS_ENABLED),
# all PUBLIC on the Jolt target. Since we link the prebuilt Jolt.lib directly (no imported
# target), we must mirror the same defines here. A mismatch makes JPH_VERSION_ID at the
# kPhysicsManager::init call site disagree with Jolt.lib, and RegisterTypes() std::abort()s.
target_compile_definitions(kemena3d PUBLIC
    $<$<CONFIG:Debug,Release>:JPH_DEBUG_RENDERER>
    $<$<CONFIG:Debug,Release>:JPH_PROFILE_ENABLED>
    JPH_OBJECT_STREAM
    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<CONFIG:Debug,Release>>:JPH_FLOATING_POINT_EXCEPTIONS_ENABLED>
)

# All static dependencies (assimp, Jolt, angelscript, recast) are built with
# /MD (MultiThreadedDLL).  Force /MD here so CRT records match at link time.
if(MSVC AND NOT BUILD_SHARED_LIBS)
    set_target_properties(kemena3d PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
endif()

# OpenGL context version — default 3.3, opt-in to 4.5
option(KEMENA_OPENGL_45 "Use an OpenGL 4.5 context instead of 3.3" OFF)
if(KEMENA_OPENGL_45)
    target_compile_definitions(kemena3d PUBLIC KEMENA_OPENGL_45)
endif()

# OpenGL ES 3.0 backend for Android / mobile platforms.
# When enabled the engine uses #include <GLES3/gl3.h> instead of GLEW,
# requests an ES 3.0 context via SDL, and disables desktop-only features
# (glPolygonMode, GL_FRAMEBUFFER_SRGB toggle, etc.).
option(KEMENA_GLES "Build with OpenGL ES 3.0 backend (Android / mobile)" OFF)
if(KEMENA_GLES)
    target_compile_definitions(kemena3d PUBLIC KEMENA_GLES)
    # On Android, GLES3 is provided by the NDK; on desktop we need to link
    # against a GLES emulation library (e.g. ANGLE, PowerVR SDK, or Mesa).
    if(ANDROID)
        target_link_libraries(kemena3d PUBLIC GLESv3 EGL)
    elseif(WIN32)
        # When testing GLES on Windows via ANGLE, link libGLESv2 instead of opengl32.
        # Standard desktop GL can also serve GLES through the compatibility profile.
        message(STATUS "KEMENA_GLES on Win32: using desktop GL as GLES fallback")
    elseif(APPLE)
        message(STATUS "KEMENA_GLES on Apple: using OpenGL.framework (ES via compat profile)")
    elseif(UNIX)
        target_link_libraries(kemena3d PUBLIC GLESv2 EGL)
    endif()

    # GLEW is not used in GLES mode — ImGui's OpenGL3 backend needs a different loader.
    target_compile_definitions(kemena3d PRIVATE IMGUI_IMPL_OPENGL_LOADER_CUSTOM)
endif()

# Platform specific
if (WIN32)
	target_link_libraries(kemena3d PUBLIC opengl32)
    target_compile_definitions(kemena3d PRIVATE _WINDOWS NOMINMAX)
	if (NOT BUILD_SHARED_LIBS)
		target_compile_definitions(kemena3d PUBLIC KEMENA3D_STATIC)
	endif()
	# Define export macro only for shared builds
    if (BUILD_SHARED_LIBS)
        target_compile_definitions(kemena3d PRIVATE KEMENA3D_EXPORTS)
    endif()
elseif (APPLE)
    find_library(COCOA_LIBRARY Cocoa)
    find_library(OpenGL_LIBRARY OpenGL)
    target_link_libraries(kemena3d PUBLIC ${COCOA_LIBRARY} ${OpenGL_LIBRARY})
    target_compile_definitions(kemena3d PRIVATE _MACOS)
elseif (UNIX)
    find_package(OpenGL REQUIRED)
    find_package(X11 REQUIRED)
    target_link_libraries(kemena3d PUBLIC ${OPENGL_LIBRARIES} ${X11_LIBRARIES})
    target_compile_definitions(kemena3d PRIVATE _LINUX)
endif()

# Link libraries
target_link_libraries(kemena3d
    PUBLIC
		$<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/build_Debug/libangelscript.dll.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/build_Release/libangelscript.dll.a
        >
		$<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/sdl/build_Debug/libSDL3.dll.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/sdl/build_Release/libSDL3.dll.a
        >
)

# Assimp is linked only for editor-style builds.
if(KEMENA_USE_ASSIMP)
    target_link_libraries(kemena3d
        PUBLIC
            $<IF:$<CONFIG:Debug>,
                ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/assimp/build_Debug/libassimp.dll.a,
                ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/assimp/build_Release/libassimp.dll.a
            >
    )
endif()

# GLEW (built from source via build/cmake/)
if(MSVC)
    target_link_libraries(kemena3d PUBLIC
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Debug/lib/Debug/${GLEW_LIB}.lib,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Release/lib/Release/${GLEW_LIB}.lib
        >
    )
else()
    target_link_libraries(kemena3d PUBLIC
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Debug/lib/lib${GLEW_LIB}.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Release/lib/lib${GLEW_LIB}.a
        >
    )
endif()

# Jolt Physics (always static; output path differs between generators)
#   MSVC:   build_Debug/Debug/Jolt.lib
#   Xcode:  build_Debug/Debug/libJolt.a
#   Unix/Makefiles:  build_Debug/libJolt.a
if(MSVC)
    target_link_libraries(kemena3d PUBLIC
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Debug/Debug/Jolt.lib,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Release/Release/Jolt.lib
        >
    )
elseif(CMAKE_GENERATOR STREQUAL "Xcode")
    target_link_libraries(kemena3d PUBLIC
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Debug/Debug/libJolt.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Release/Release/libJolt.a
        >
    )
else()
    target_link_libraries(kemena3d PUBLIC
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Debug/libJolt.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Release/libJolt.a
        >
    )
endif()

# Recast Navigation (Recast, Detour, DetourCrowd, DetourTileCache)
if(MSVC)
    target_link_libraries(kemena3d PUBLIC
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Debug/Recast.lib,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Release/Recast.lib
        >
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Debug/Detour.lib,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Release/Detour.lib
        >
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Debug/DetourCrowd.lib,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Release/DetourCrowd.lib
        >
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Debug/DetourTileCache.lib,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Release/DetourTileCache.lib
        >
    )
else()
    target_link_libraries(kemena3d PUBLIC
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Debug/libRecast.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Release/libRecast.a
        >
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Debug/libDetour.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Release/libDetour.a
        >
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Debug/libDetourCrowd.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Release/libDetourCrowd.a
        >
        $<IF:$<CONFIG:Debug>,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Debug/libDetourTileCache.a,
            ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/lib/Release/libDetourTileCache.a
        >
    )
endif()

# Suppress some noisy warnings
if (MSVC)
    target_compile_options(kemena3d PRIVATE /wd4996 /FS)
else()
    target_compile_options(kemena3d PRIVATE -Wno-deprecated-declarations)
endif()

# Visual Studio startup project
if (MSVC)
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT kemena3d)
endif()

include(GNUInstallDirs) # defines CMAKE_INSTALL_INCLUDEDIR=include, LIBDIR=lib

# Install libraries → into lib/<CONFIG>
install(TARGETS kemena3d
    EXPORT kemena3dTargets
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION lib
    PUBLIC_HEADER DESTINATION include/kemena
)

# Headers (always into Output/include)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imgui/
    DESTINATION include FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imgui/backends/
    DESTINATION include/backends FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/angelscript/include/
    DESTINATION include FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/add_on/
    DESTINATION include FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/sdl/include/SDL3/
    DESTINATION include/SDL3 FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/include/GL/
    DESTINATION include/GL FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/assimp/include/assimp/
    DESTINATION include/assimp FILES_MATCHING PATTERN "*.h*" PATTERN "*.inl"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glm/glm/
    DESTINATION include/glm FILES_MATCHING PATTERN "*.h*" PATTERN "*.inl"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/stb/
    DESTINATION include/stb FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/nlohmann/include/nlohmann/
    DESTINATION include/nlohmann FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/portable-file-dialogs/
    DESTINATION include FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/imguizmo/src/
    DESTINATION include FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/slang/build_Release/dist/include/
    DESTINATION include FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/miniaudio/
    DESTINATION include FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Jolt/
    DESTINATION include/Jolt FILES_MATCHING PATTERN "*.h*"
)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/recast/dist/include/
    DESTINATION include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")

# Dependency libs (per-config into Output/lib/{Debug,Release})
file(GLOB_RECURSE LIBS_DEBUG
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/**/build_Debug/*.lib"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/**/build_Debug/*.a"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/**/build_Debug/*.dll"
	"${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/angelscript/projects/**/build_Debug/*.lib"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/angelscript/projects/**/build_Debug/*.a"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/angelscript/projects/**/build_Debug/*.dll"
)
file(GLOB_RECURSE LIBS_RELEASE
	"${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/**/build_Release/*.lib"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/**/build_Release/*.a"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/**/build_Release/*.dll"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/angelscript/projects/**/build_Release/*.lib"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/angelscript/projects/**/build_Release/*.a"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/angelscript/angelscript/projects/**/build_Release/*.dll"
)
install(FILES ${LIBS_DEBUG}   DESTINATION lib   CONFIGURATIONS Debug)
install(FILES ${LIBS_RELEASE} DESTINATION lib	CONFIGURATIONS Release)

file(GLOB GLEW_LIBS_DEBUG
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Debug/lib/Debug/*.lib"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Debug/lib/*.a"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Debug/bin/Debug/*.dll"
)
file(GLOB GLEW_LIBS_RELEASE
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Release/lib/Release/*.lib"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Release/lib/*.a"
    "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glew/build/cmake/build_Release/bin/Release/*.dll"
)
install(FILES ${GLEW_LIBS_DEBUG}   DESTINATION lib CONFIGURATIONS Debug)
install(FILES ${GLEW_LIBS_RELEASE} DESTINATION lib CONFIGURATIONS Release)

# Jolt Physics — output path varies by generator:
#   MSVC:   build_Debug/Debug/Jolt.lib
#   Xcode:  build_Debug/Debug/libJolt.a
#   Unix/Makefiles:  build_Debug/libJolt.a
if(MSVC)
    install(FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Debug/Debug/Jolt.lib"
        DESTINATION lib CONFIGURATIONS Debug
    )
    install(FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Release/Release/Jolt.lib"
        DESTINATION lib CONFIGURATIONS Release
    )
elseif(CMAKE_GENERATOR STREQUAL "Xcode")
    install(FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Debug/Debug/libJolt.a"
        DESTINATION lib CONFIGURATIONS Debug
    )
    install(FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Release/Release/libJolt.a"
        DESTINATION lib CONFIGURATIONS Release
    )
else()
    install(FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Debug/libJolt.a"
        DESTINATION lib CONFIGURATIONS Debug
    )
    install(FILES
        "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/jolt/Build/build_Release/libJolt.a"
        DESTINATION lib CONFIGURATIONS Release
    )
endif()